--- a/public/ds-book-r/p03-75-mlops-vetiver.html
+++ b/public/ds-book-r/p03-75-mlops-vetiver.html
@@ -667,12 +667,6 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
  <span class="menu-text"><span class="chapter-number">71</span>&nbsp; <span class="chapter-title">Các lưu ý phân tích thực tế</span></span></a>
   </div>
 </li>
-          <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./p13-02-to-chuc-project.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">72</span>&nbsp; <span class="chapter-title">Tổ chức R project</span></span></a>
-  </div>
-</li>
       </ul>
   </li>
     </ul>
@@ -713,9 +707,10 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 </header>
 
-<p>Sau khi xây dựng mô hình, việc tiếp theo là đưa mô hình vào môi trường production để phục vụ dự báo. Trước kia, có 2 dạng kiến trúc deploy mô hình có thể được sử dụng như sau:</p>
+<p>Sau khi xây dựng mô hình, việc tiếp theo là đưa mô hình vào môi trường production để phục vụ dự báo. Các dạng kiến trúc deploy mô hình có thể được sử dụng như sau:</p>
 <ul>
 <li>Chuyển đổi mô hình thành định dạng XML - PMML (Predictive Model Markup Language) và deploy sang các platform khác có hỗ trợ.</li>
+<li>Chuyển đổi mô hình thành các ngôn ngữ khác (như Java) và deploy với Java- điển hình như cách thức sử dụng định dạng MOJO và POJO với H2O.</li>
 <li>Chuyển đổi mô hình thành code và dự báo ngay trong database - đặc biệt với các mô hình dạng cây mới như xgboost. Ví dụ <a href="">https://github.com/chengjunhou/xgb2sql</a></li>
 </ul>
 <p>Tuy nhiên, với sự phát triển vượt bậc của công nghệ điện toán đám mây cũng như micro services, việc deploy mô hình hiện đại cũng có nhiều sự thay đổi và khiến cho luồng vận hành đơn giản hơn rất nhiều. Toàn bộ quá trình deploy và vận hành mô hình khi đưa vào thực tế gọi là <code>MLOPS</code>.</p>
