--- a/public/ds-book-r/p13-01-phan-tich-thuc-te.html
+++ b/public/ds-book-r/p13-01-phan-tich-thuc-te.html
@@ -30,7 +30,6 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
-<link href="./p13-02-to-chuc-project.html" rel="next">
 <link href="./p11-90-other.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
@@ -64,6 +63,8 @@ ul.task-list li input[type="checkbox"] {
   }
 }</script>
 
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
 
 </head>
 
@@ -633,12 +634,6 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text"><span class="chapter-number">71</span>&nbsp; <span class="chapter-title">Các lưu ý phân tích thực tế</span></span></a>
   </div>
 </li>
-          <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./p13-02-to-chuc-project.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">72</span>&nbsp; <span class="chapter-title">Tổ chức R project</span></span></a>
-  </div>
-</li>
       </ul>
   </li>
     </ul>
@@ -651,9 +646,12 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Mục lục</h2>
    
   <ul>
-  <li><a href="#cách-thức-phân-tích-insights" id="toc-cách-thức-phân-tích-insights" class="nav-link active" data-scroll-target="#cách-thức-phân-tích-insights"><span class="header-section-number">71.1</span> Cách thức phân tích insights</a></li>
-  <li><a href="#lưu-ý-khi-đặt-tên-file" id="toc-lưu-ý-khi-đặt-tên-file" class="nav-link" data-scroll-target="#lưu-ý-khi-đặt-tên-file"><span class="header-section-number">71.2</span> Lưu ý khi đặt tên file</a></li>
-  <li><a href="#cách-xây-dựng-nhóm-phân-tích-dữ-liệu" id="toc-cách-xây-dựng-nhóm-phân-tích-dữ-liệu" class="nav-link" data-scroll-target="#cách-xây-dựng-nhóm-phân-tích-dữ-liệu"><span class="header-section-number">71.3</span> Cách xây dựng nhóm phân tích dữ liệu</a></li>
+  <li><a href="#cách-thức-tìm-insights-đặt-câu-hỏi" id="toc-cách-thức-tìm-insights-đặt-câu-hỏi" class="nav-link active" data-scroll-target="#cách-thức-tìm-insights-đặt-câu-hỏi"><span class="header-section-number">71.1</span> Cách thức tìm insights &amp; đặt câu hỏi</a>
+  <ul>
+  <li><a href="#đặt-câu-hỏi" id="toc-đặt-câu-hỏi" class="nav-link" data-scroll-target="#đặt-câu-hỏi"><span class="header-section-number">71.1.1</span> Đặt câu hỏi</a></li>
+  <li><a href="#cách-tìm-kiếm-insights" id="toc-cách-tìm-kiếm-insights" class="nav-link" data-scroll-target="#cách-tìm-kiếm-insights"><span class="header-section-number">71.1.2</span> Cách tìm kiếm insights</a></li>
+  </ul></li>
+  <li><a href="#cách-tổ-chức-project" id="toc-cách-tổ-chức-project" class="nav-link" data-scroll-target="#cách-tổ-chức-project"><span class="header-section-number">71.2</span> Cách tổ chức project</a></li>
   </ul>
 </nav>
     </div>
@@ -677,24 +675,138 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="cách-thức-phân-tích-insights" class="level2" data-number="71.1">
-<h2 data-number="71.1" class="anchored" data-anchor-id="cách-thức-phân-tích-insights"><span class="header-section-number">71.1</span> Cách thức phân tích insights</h2>
-</section>
-<section id="lưu-ý-khi-đặt-tên-file" class="level2" data-number="71.2">
-<h2 data-number="71.2" class="anchored" data-anchor-id="lưu-ý-khi-đặt-tên-file"><span class="header-section-number">71.2</span> Lưu ý khi đặt tên file</h2>
-</section>
-<section id="cách-xây-dựng-nhóm-phân-tích-dữ-liệu" class="level2" data-number="71.3">
-<h2 data-number="71.3" class="anchored" data-anchor-id="cách-xây-dựng-nhóm-phân-tích-dữ-liệu"><span class="header-section-number">71.3</span> Cách xây dựng nhóm phân tích dữ liệu</h2>
-<p>Để xây dựng nhóm phân tích dữ liệu, cần đảm bảo 3 nguyên tắc lớn sau:</p>
+<section id="cách-thức-tìm-insights-đặt-câu-hỏi" class="level2" data-number="71.1">
+<h2 data-number="71.1" class="anchored" data-anchor-id="cách-thức-tìm-insights-đặt-câu-hỏi"><span class="header-section-number">71.1</span> Cách thức tìm insights &amp; đặt câu hỏi</h2>
+<section id="đặt-câu-hỏi" class="level3" data-number="71.1.1">
+<h3 data-number="71.1.1" class="anchored" data-anchor-id="đặt-câu-hỏi"><span class="header-section-number">71.1.1</span> Đặt câu hỏi</h3>
+<p>Khi phân tích dữ liệu, ta cần nắm rõ <em>vấn đề kinh doanh</em> trước khi bắt tay đi vào phân tích dự báo.</p>
 <ul>
-<li>Nắm vững kỹ năng phân tích khám phá dữ liệu - tập trung vào các nhóm có khả năng giải thích (<code>inference</code>) &amp; có khả năng đọc hiểu cơ bản kết quả dự báo với học máy</li>
-<li>Bám sát hoạt động kinh doanh</li>
-<li>Đẩy mạnh tương tác nhóm &amp; phân nhóm kỹ năng dựa trên sở thích và tính cách cá nhân.</li>
+<li>Với các bài toán có thể dự báo &amp; ứng dụng học máy - như dự báo khả năng khách hàng rời bỏ, bán chéo,… cần đặc biệt lưu ý về phương thức áp dụng trong thực tế sau khi xây dựng mô hình.</li>
+<li>Với các bài toán phân tích khám phá - cần phải đặt ra các câu hỏi (<code>hypothesis</code>) và tìm cách trả lời các câu hỏi đó. Các kỹ thuật đặt câu hỏi như sau:
+<ul>
+<li><strong>Cách 1</strong>: Đặt các câu hỏi dạng yes/no question.</li>
+<li><strong>Cách 2</strong>: Đặt các câu hỏi mang tính định lượng sau khi đã trở lời các câu hỏi dạng yes/no</li>
+</ul></li>
 </ul>
-<p><strong>Thứ nhất</strong>, nền tảng của toàn bộ hoạt động phân tích dữ liệu (Analytics) phải giải quyết được bài toán kinh doanh dưới góc độ phân tích dữ liệu. Do đó, không nhất thiết phải xây dựng các mô hình phức tạp để giải quyết bài toán. Ngược lại, trong nhiều tình huống, ta nên sử dụng các phương pháp đơn giản bởi hai lý do: thứ nhất - có thể giải thích cho kinh doanh và thứ hai - rất nhiều vấn đề không cần xây mô hình cũng có thể giải quyết ngay được bởi các nguyên nhân từ vận hành, con người và sản phẩm. Chỉ khi nắm vững được kỹ năng phân tích khám phá dữ liệu ta mới có thể đưa ra các nhận định và kết quả một cách nhanh chóng và chính xác hỗ trợ hoạt động kinh doanh.</p>
-<p><strong>Thứ hai</strong>, hoạt động phân tích được sinh ra nhằm phục vụ kinh doanh. Do đó, nếu không nắm vững đến một mức độ nhất định hoạt động kinh doanh, ta không thể đưa ra các kết luận thực tế và có thể triển khai được. Rất nhiều trường hợp, nhóm phân tích dữ liệu quá chú trọng đến mặt kỹ thuật và thuật toán, đưa ra những kết luận phi thực tế. Điều này cần tránh dối với các tổ chức hướng đến việc ứng dụng phân tích dữ liệu thưc tiễn hỗ trợ kinh doanh.</p>
-<p><strong>Thứ ba</strong>, các bạn làm việc trong lĩnh vực phân tích dữ liệu thường khá thông minh và thích làm việc tương đối độc lập. Tuy nhiên, bên cạnh đó còn có rất nhiều các khía cạnh khác nhau trong hoạt động phân tích dữ liệu. Có người ưa thích thuật toán và kiên trì và có thể tự học tốt nhưng lại yếu trong khâu giao tiếp và tương tác. Nhóm này nên khuyến khích phát triển các bài toán và vấn đề dự báo. Ngược lại, có nhóm rất thông minh, nhanh nhạy, thích thể hiện trước đông người nhưng lại thường xuyên cả thèm chóng chán. Nhóm này nên phát triển các kỹ năng khám phá dữ liệu, tìm kiếm insights và nên giao cho nhiệm vụ tương tác chính với kinh doanh. Ngoài ra, còn có nhóm trunh bình, việc gì cũng có thể làm ở mức độ khá nhưng không có việc gì thực sự nổi trội. Với nhóm này nên cố gắng bồi dưỡng để họ phát huy kiến thức tổng thể và hướng họ có thể back-up hai nhóm trên.</p>
-<p>Thêm vào đó, việc phân rã kỹ năng còn giúp cho kiến thức không bị quá tập trung vào 1-2 thành viên, điều này có thể khiến cho hoạt động phân tích dữ liệu bị chậm lại do bị phụ thuộc vào những thành viên đó.</p>
+<p>Ví dụ:</p>
+<ul>
+<li>Giả thuyết loại 1: Tự động tăng hạn mức thẻ tín dụng giúp ngân hàng tăng dự nợ thẻ tín dụng? (Trẳ lời dạng có/không)</li>
+<li>Giả thuyết loại 2: Tự động tăng hạn mức giúp tăng bao nhiêu dư nợ thẻ tín dụng? (câu hỏi định lượng)</li>
+</ul>
+<hr>
+<p>Khi phân tích, đặc biệt tránh các câu hỏi thiếu cụ thể từ đơn vị kinh doanh. Ví dụ: <em>Hành vi của khách hàng sau khi phàn nàn lên tổng đài là gì</em>?</p>
+<p>Tuy nhiên, thực tế các đơn vị khi yêu cầu phân tích thường chỉ đưa ra được các câu hỏi dạng này, khiến cho hoạt động phân tích có nhiều khó khăn và thiếu tính cụ thể. Do đó, ta có thể đặt câu hỏi ngược lại để khai thác thêm thông tin như:</p>
+<ul>
+<li><em>Theo anh/chị, khách hàng sau khi phàn nàn thì có thể có các phản ứng như thế nào, điều này ảnh hưởng đến kết quả kinh doanh ra sao (quy về câu hỏi loại 1 và 2)</em></li>
+<li><em>Nếu giả sử kết quả phân tích ra đúng/không đúng như phỏng đoán của anh chị, thì anh/chị sẽ làm gì tiếp để giảm thiểu các ảnh hưởng tiêu cực trên?</em></li>
+</ul>
+<div class="callout callout-style-default callout-warning callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Lưu ý
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Đặt câu hỏi đúng để hiểu chính xác vấn đề kinh doanh là kỹ năng đặc biệt quan trọng trong phân tích dữ liệu. Nếu không, rất có thể các dự án phân tích đang cố gắng tìm giải pháp đúng cho một vấn đề sai.</p>
+</div>
+</div>
+</section>
+<section id="cách-tìm-kiếm-insights" class="level3" data-number="71.1.2">
+<h3 data-number="71.1.2" class="anchored" data-anchor-id="cách-tìm-kiếm-insights"><span class="header-section-number">71.1.2</span> Cách tìm kiếm insights</h3>
+<p>Bên cạnh các bài toán tường minh về dự báo, phần lớn ứng dụng thực sự lại nằm ở việc phân tích khám phá insights. Các kỹ thuật thường dùng có thể chia như sau:</p>
+<table class="table">
+<colgroup>
+<col style="width: 10%">
+<col style="width: 70%">
+<col style="width: 20%">
+</colgroup>
+<thead>
+<tr class="header">
+<th><strong>STT</strong></th>
+<th><strong>Vấn đề</strong></th>
+<th><strong>Kỹ thuật</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td>Tìm mối quan hệ giữa 2 biến liên tục. VD: Chi tiêu và thu nhập có mối quan hệ như thế nào</td>
+<td>Hệ số tương quan, mô hình tuyến tính</td>
+</tr>
+<tr class="even">
+<td>2</td>
+<td>Mối quan hệ 2 biến rời rạc. VD: Yếu tố khu vực &amp; vị trí bán ảnh hưởng đến tỷ lệ gian lận như thế nào</td>
+<td><span class="math inline">\(\chi^2\)</span>, lift, WoE, Prop test</td>
+</tr>
+<tr class="odd">
+<td>3</td>
+<td>Mối quan hệ giữa 1 biến rời rạc &amp; 1 biến liên tục. VD: Chi tiêu bình quân theo các phân khúc khách hàng khác nhau như thế nào?</td>
+<td>ANOVA, WoE</td>
+</tr>
+<tr class="even">
+<td>4</td>
+<td>Tìm ảnh hưởng đến thời gian xảy ra 1 sự kiện. VD: Tỷ lệ CR theo thời gian với các chương trình khuyến mãi thế nào?</td>
+<td>Phân tích cohort, survival analysis, phân tích vintage</td>
+</tr>
+<tr class="odd">
+<td>5</td>
+<td>Phân nhóm khách hàng. VD: 100K khách hàng hiện hữu có thể phân thành các nhóm đặc thù như thế nào?</td>
+<td>k-means &amp; phân tích khám phá</td>
+</tr>
+</tbody>
+</table>
+<p>Bên cạnh đó, để tìm ra các yếu tố quan trọng ảnh hưởng đến 1 chỉ số - ví dụ: các yếu tố quan trọng nhất ảnh hưởng đến khả năng khách hàng rời bỏ, ta có thể xây dựng mô hình học máy đơn giản (VD: GBM, XGBoost), không cần tuning để lấy ra nhanh chóng các biến có khả năng ảnh hưởng nhiều nhất.</p>
+</section>
+</section>
+<section id="cách-tổ-chức-project" class="level2" data-number="71.2">
+<h2 data-number="71.2" class="anchored" data-anchor-id="cách-tổ-chức-project"><span class="header-section-number">71.2</span> Cách tổ chức project</h2>
+<pre><code>Project
+|-- my-project.Rproj
+|-- README
+|-- 01-data
+    |-- 01-raw-data
+        |-- 01-customer.rda
+        |-- 02-transaction.rda
+        |-- ...
+    |-- 02-clean-data
+        |-- 01-customer-clean.rda
+        |-- 02-transaction-clean.rda
+        |-- 03-data-analysis.rda
+    |-- 03-result-data
+        |-- customer-summary.rda
+        |-- segment-impact.rda
+|-- 02-code
+    |-- 00-source.R
+    |-- 01-get-customer-raw.R
+    |-- 02-get-transaction-raw.R
+    |-- 11-clean-customer.R
+    |-- 12-clean-clean-transaction.R
+    |-- 21-customer-summary.R
+    |-- 22-customer-impact.R
+|-- 03-output (optional)
+    |-- 01-customer-flow.png
+    |-- 02-anova-chart.png
+    |-- analysis.pptx
+20230516-customer-analysis.qmd</code></pre>
+<p>Luồng phân tích có thể thể hiện trực quan hơn như sau:</p>
+<p><img src="Images/p13-01-rproject-analysis-flow.png" class="img-fluid"></p>
+<p>Trong đó:</p>
+<ul>
+<li>File <code>.proj</code>: File R project</li>
+<li><code>READ.ME</code>: File text mô tả description của phân tích</li>
+<li>Thư mục <code>02-code</code> - để chứa các script làm sạch và phân tích. Có thể chia nhỏ thành các sub-folder con theo mục đích, nhưng không cần thiết để tránh bị phân mảnh. Ta có thể chia như sau:
+<ul>
+<li><code>00-source.R</code>: Các function viết thêm khi đưa vào project</li>
+<li><strong>Bước 1: Lấy dữ liệu thô</strong>. Các script lấy raw data có thể đánh số từ 01-10, thêm tiền tố: <code>get</code>. Ví dụ: <code>01-get-customer.R</code>, <code>02-get-transaction.R</code>. Ở các script này có thể làm sạch ở mức độ kỹ thuật như convert từ text về date, chuyển đổi text thành factor,… nhưng hạn chế lọc hoặc đưa thêm các logic mới vào. Kết quả đầu ra các script này được lưu trong folder <code>01-data/01-raw-data</code></li>
+<li><strong>Bước 2: Làm sạch dữ liệu</strong>. Các script clean làm sạch ở tầng logic, hay đã có các bước biến đổi, chuẩn hóa, lọc để lấy ra 1 tập dữ liệu phục vụ phân tích,… Nên tách nhỏ từng mục đích, output của mỗi script nên lưu thành 1 file khác nhau, trong folder <code>01-data/02-clean-data</code></li>
+<li><strong>Bước 3: Phân tích dữ liệu</strong>. Các bước phân tích (đã được chuẩn hóa và làm sạch). Kết quả của các bước này sẽ được lưu tại folder <code>01-data/03-result-data</code>. File phân tích cuối cùng <code>.qmd</code> sẽ load dữ liệu từ <code>result-data</code> để tăng tốc độ xử lý.</li>
+</ul></li>
+<li>Folder <code>01-data</code>: Chứa các file kết quả đầu ra của các nhóm script.</li>
+<li><code>analysis.qmd</code>: Là file chứa kết quả trình bày phân tích cuối. Ở file này, ta nên hạn chế load dữ liệu nặng mà nên sử dụng kết quả đầu ra của các script trước để gia tăng tốc độ <em>knit</em></li>
+</ul>
 
 
 </section>
@@ -1055,9 +1167,6 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./p13-02-to-chuc-project.html" class="pagination-link">
-        <span class="nav-page-text"><span class="chapter-number">72</span>&nbsp; <span class="chapter-title">Tổ chức R project</span></span> <i class="bi bi-arrow-right-short"></i>
-      </a>
   </div>
 </nav>
 </div> <!-- /content -->
