--- a/public/ds-book-r/p13-01-phan-tich-thuc-te.html
+++ b/public/ds-book-r/p13-01-phan-tich-thuc-te.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Khoa học dữ liệu với R - 71&nbsp; Các lưu ý phân tích thực tế</title>
+<title>Khoa học dữ liệu với R - 72&nbsp; Các lưu ý phân tích thực tế</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -78,7 +78,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./p13-01-phan-tich-thuc-te.html">Phân tích thực tế</a></li><li class="breadcrumb-item"><a href="./p13-01-phan-tich-thuc-te.html"><span class="chapter-number">71</span>&nbsp; <span class="chapter-title">Các lưu ý phân tích thực tế</span></a></li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./p13-01-phan-tich-thuc-te.html">Phân tích thực tế</a></li><li class="breadcrumb-item"><a href="./p13-01-phan-tich-thuc-te.html"><span class="chapter-number">72</span>&nbsp; <span class="chapter-title">Các lưu ý phân tích thực tế</span></a></li></ol></nav>
       <a class="flex-grow-1" role="button" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -525,8 +525,14 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./p07-21-bupar.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">59</span>&nbsp; <span class="chapter-title">Business Process Analytics</span></span></a>
+  <a href="./p07-21-dea.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text"><span class="chapter-number">59</span>&nbsp; <span class="chapter-title">Data Envelopment Analysis</span></span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./p07-22-bupar.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text"><span class="chapter-number">60</span>&nbsp; <span class="chapter-title">Business Process Analytics</span></span></a>
   </div>
 </li>
       </ul>
@@ -543,37 +549,37 @@ ul.task-list li input[type="checkbox"] {
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p10-01-cai-dat-rstudio-server-tren-amazon.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">60</span>&nbsp; <span class="chapter-title">Cài đặt server RStudio trên Amazon</span></span></a>
+ <span class="menu-text"><span class="chapter-number">61</span>&nbsp; <span class="chapter-title">Cài đặt server RStudio trên Amazon</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p10-03-web-service-azure.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">61</span>&nbsp; <span class="chapter-title">Xây dựng web service với Azure</span></span></a>
+ <span class="menu-text"><span class="chapter-number">62</span>&nbsp; <span class="chapter-title">Xây dựng web service với Azure</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p10-09-apis-voi-plumber.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">62</span>&nbsp; <span class="chapter-title">API với Plumber</span></span></a>
+ <span class="menu-text"><span class="chapter-number">63</span>&nbsp; <span class="chapter-title">API với Plumber</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p07-10-shiny.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">63</span>&nbsp; <span class="chapter-title">Shiny apps</span></span></a>
+ <span class="menu-text"><span class="chapter-number">64</span>&nbsp; <span class="chapter-title">Shiny apps</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p10-02-deploy-shiny-app-aws.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">64</span>&nbsp; <span class="chapter-title">Deploy Shiny Apps lên AWS</span></span></a>
+ <span class="menu-text"><span class="chapter-number">65</span>&nbsp; <span class="chapter-title">Deploy Shiny Apps lên AWS</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p07-30-python-voi-r.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">65</span>&nbsp; <span class="chapter-title">Sử dụng Python với R</span></span></a>
+ <span class="menu-text"><span class="chapter-number">66</span>&nbsp; <span class="chapter-title">Sử dụng Python với R</span></span></a>
   </div>
 </li>
       </ul>
@@ -590,31 +596,31 @@ ul.task-list li input[type="checkbox"] {
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p11-01-git.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">66</span>&nbsp; <span class="chapter-title">Sử dụng GIT</span></span></a>
+ <span class="menu-text"><span class="chapter-number">67</span>&nbsp; <span class="chapter-title">Sử dụng GIT</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p11-02-cmd.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">67</span>&nbsp; <span class="chapter-title">CMD và Bash</span></span></a>
+ <span class="menu-text"><span class="chapter-number">68</span>&nbsp; <span class="chapter-title">CMD và Bash</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p11-03-docker.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">68</span>&nbsp; <span class="chapter-title">Sử dụng docker</span></span></a>
+ <span class="menu-text"><span class="chapter-number">69</span>&nbsp; <span class="chapter-title">Sử dụng docker</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p11-04-apis.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">69</span>&nbsp; <span class="chapter-title">API</span></span></a>
+ <span class="menu-text"><span class="chapter-number">70</span>&nbsp; <span class="chapter-title">API</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p11-90-other.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">70</span>&nbsp; <span class="chapter-title">Các tricks khác</span></span></a>
+ <span class="menu-text"><span class="chapter-number">71</span>&nbsp; <span class="chapter-title">Các tricks khác</span></span></a>
   </div>
 </li>
       </ul>
@@ -631,7 +637,7 @@ ul.task-list li input[type="checkbox"] {
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p13-01-phan-tich-thuc-te.html" class="sidebar-item-text sidebar-link active">
- <span class="menu-text"><span class="chapter-number">71</span>&nbsp; <span class="chapter-title">Các lưu ý phân tích thực tế</span></span></a>
+ <span class="menu-text"><span class="chapter-number">72</span>&nbsp; <span class="chapter-title">Các lưu ý phân tích thực tế</span></span></a>
   </div>
 </li>
       </ul>
@@ -646,12 +652,12 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Mục lục</h2>
    
   <ul>
-  <li><a href="#cách-thức-tìm-insights-đặt-câu-hỏi" id="toc-cách-thức-tìm-insights-đặt-câu-hỏi" class="nav-link active" data-scroll-target="#cách-thức-tìm-insights-đặt-câu-hỏi"><span class="header-section-number">71.1</span> Cách thức tìm insights &amp; đặt câu hỏi</a>
+  <li><a href="#cách-thức-tìm-insights-đặt-câu-hỏi" id="toc-cách-thức-tìm-insights-đặt-câu-hỏi" class="nav-link active" data-scroll-target="#cách-thức-tìm-insights-đặt-câu-hỏi"><span class="header-section-number">72.1</span> Cách thức tìm insights &amp; đặt câu hỏi</a>
   <ul>
-  <li><a href="#đặt-câu-hỏi" id="toc-đặt-câu-hỏi" class="nav-link" data-scroll-target="#đặt-câu-hỏi"><span class="header-section-number">71.1.1</span> Đặt câu hỏi</a></li>
-  <li><a href="#cách-tìm-kiếm-insights" id="toc-cách-tìm-kiếm-insights" class="nav-link" data-scroll-target="#cách-tìm-kiếm-insights"><span class="header-section-number">71.1.2</span> Cách tìm kiếm insights</a></li>
+  <li><a href="#đặt-câu-hỏi" id="toc-đặt-câu-hỏi" class="nav-link" data-scroll-target="#đặt-câu-hỏi"><span class="header-section-number">72.1.1</span> Đặt câu hỏi</a></li>
+  <li><a href="#cách-tìm-kiếm-insights" id="toc-cách-tìm-kiếm-insights" class="nav-link" data-scroll-target="#cách-tìm-kiếm-insights"><span class="header-section-number">72.1.2</span> Cách tìm kiếm insights</a></li>
   </ul></li>
-  <li><a href="#cách-tổ-chức-project" id="toc-cách-tổ-chức-project" class="nav-link" data-scroll-target="#cách-tổ-chức-project"><span class="header-section-number">71.2</span> Cách tổ chức project</a></li>
+  <li><a href="#cách-tổ-chức-project" id="toc-cách-tổ-chức-project" class="nav-link" data-scroll-target="#cách-tổ-chức-project"><span class="header-section-number">72.2</span> Cách tổ chức project</a></li>
   </ul>
 </nav>
     </div>
@@ -660,7 +666,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">71</span>&nbsp; <span class="chapter-title">Các lưu ý phân tích thực tế</span></h1>
+<h1 class="title"><span class="chapter-number">72</span>&nbsp; <span class="chapter-title">Các lưu ý phân tích thực tế</span></h1>
 </div>
 
 
@@ -675,10 +681,10 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="cách-thức-tìm-insights-đặt-câu-hỏi" class="level2" data-number="71.1">
-<h2 data-number="71.1" class="anchored" data-anchor-id="cách-thức-tìm-insights-đặt-câu-hỏi"><span class="header-section-number">71.1</span> Cách thức tìm insights &amp; đặt câu hỏi</h2>
-<section id="đặt-câu-hỏi" class="level3" data-number="71.1.1">
-<h3 data-number="71.1.1" class="anchored" data-anchor-id="đặt-câu-hỏi"><span class="header-section-number">71.1.1</span> Đặt câu hỏi</h3>
+<section id="cách-thức-tìm-insights-đặt-câu-hỏi" class="level2" data-number="72.1">
+<h2 data-number="72.1" class="anchored" data-anchor-id="cách-thức-tìm-insights-đặt-câu-hỏi"><span class="header-section-number">72.1</span> Cách thức tìm insights &amp; đặt câu hỏi</h2>
+<section id="đặt-câu-hỏi" class="level3" data-number="72.1.1">
+<h3 data-number="72.1.1" class="anchored" data-anchor-id="đặt-câu-hỏi"><span class="header-section-number">72.1.1</span> Đặt câu hỏi</h3>
 <p>Khi phân tích dữ liệu, ta cần nắm rõ <em>vấn đề kinh doanh</em> trước khi bắt tay đi vào phân tích dự báo.</p>
 <ul>
 <li>Với các bài toán có thể dự báo &amp; ứng dụng học máy - như dự báo khả năng khách hàng rời bỏ, bán chéo,… cần đặc biệt lưu ý về phương thức áp dụng trong thực tế sau khi xây dựng mô hình.</li>
@@ -714,8 +720,8 @@ Lưu ý
 </div>
 </div>
 </section>
-<section id="cách-tìm-kiếm-insights" class="level3" data-number="71.1.2">
-<h3 data-number="71.1.2" class="anchored" data-anchor-id="cách-tìm-kiếm-insights"><span class="header-section-number">71.1.2</span> Cách tìm kiếm insights</h3>
+<section id="cách-tìm-kiếm-insights" class="level3" data-number="72.1.2">
+<h3 data-number="72.1.2" class="anchored" data-anchor-id="cách-tìm-kiếm-insights"><span class="header-section-number">72.1.2</span> Cách tìm kiếm insights</h3>
 <p>Bên cạnh các bài toán tường minh về dự báo, phần lớn ứng dụng thực sự lại nằm ở việc phân tích khám phá insights. Các kỹ thuật thường dùng có thể chia như sau:</p>
 <table class="table">
 <colgroup>
@@ -761,8 +767,8 @@ Lưu ý
 <p>Bên cạnh đó, để tìm ra các yếu tố quan trọng ảnh hưởng đến 1 chỉ số - ví dụ: các yếu tố quan trọng nhất ảnh hưởng đến khả năng khách hàng rời bỏ, ta có thể xây dựng mô hình học máy đơn giản (VD: GBM, XGBoost), không cần tuning để lấy ra nhanh chóng các biến có khả năng ảnh hưởng nhiều nhất.</p>
 </section>
 </section>
-<section id="cách-tổ-chức-project" class="level2" data-number="71.2">
-<h2 data-number="71.2" class="anchored" data-anchor-id="cách-tổ-chức-project"><span class="header-section-number">71.2</span> Cách tổ chức project</h2>
+<section id="cách-tổ-chức-project" class="level2" data-number="72.2">
+<h2 data-number="72.2" class="anchored" data-anchor-id="cách-tổ-chức-project"><span class="header-section-number">72.2</span> Cách tổ chức project</h2>
 <pre><code>Project
 |-- my-project.Rproj
 |-- README
@@ -1163,7 +1169,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
       <a href="./p11-90-other.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">70</span>&nbsp; <span class="chapter-title">Các tricks khác</span></span>
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">71</span>&nbsp; <span class="chapter-title">Các tricks khác</span></span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
