--- a/public/ds-book-r/p07-30-python-voi-r.html
+++ b/public/ds-book-r/p07-30-python-voi-r.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Khoa học dữ liệu với R - 65&nbsp; Sử dụng Python với R</title>
+<title>Khoa học dữ liệu với R - 66&nbsp; Sử dụng Python với R</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -111,7 +111,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./p10-01-cai-dat-rstudio-server-tren-amazon.html">Cloud Computing</a></li><li class="breadcrumb-item"><a href="./p07-30-python-voi-r.html"><span class="chapter-number">65</span>&nbsp; <span class="chapter-title">Sử dụng Python với R</span></a></li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./p10-01-cai-dat-rstudio-server-tren-amazon.html">Cloud Computing</a></li><li class="breadcrumb-item"><a href="./p07-30-python-voi-r.html"><span class="chapter-number">66</span>&nbsp; <span class="chapter-title">Sử dụng Python với R</span></a></li></ol></nav>
       <a class="flex-grow-1" role="button" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -558,8 +558,14 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./p07-21-bupar.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">59</span>&nbsp; <span class="chapter-title">Business Process Analytics</span></span></a>
+  <a href="./p07-21-dea.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text"><span class="chapter-number">59</span>&nbsp; <span class="chapter-title">Data Envelopment Analysis</span></span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./p07-22-bupar.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text"><span class="chapter-number">60</span>&nbsp; <span class="chapter-title">Business Process Analytics</span></span></a>
   </div>
 </li>
       </ul>
@@ -576,37 +582,37 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p10-01-cai-dat-rstudio-server-tren-amazon.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">60</span>&nbsp; <span class="chapter-title">Cài đặt server RStudio trên Amazon</span></span></a>
+ <span class="menu-text"><span class="chapter-number">61</span>&nbsp; <span class="chapter-title">Cài đặt server RStudio trên Amazon</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p10-03-web-service-azure.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">61</span>&nbsp; <span class="chapter-title">Xây dựng web service với Azure</span></span></a>
+ <span class="menu-text"><span class="chapter-number">62</span>&nbsp; <span class="chapter-title">Xây dựng web service với Azure</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p10-09-apis-voi-plumber.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">62</span>&nbsp; <span class="chapter-title">API với Plumber</span></span></a>
+ <span class="menu-text"><span class="chapter-number">63</span>&nbsp; <span class="chapter-title">API với Plumber</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p07-10-shiny.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">63</span>&nbsp; <span class="chapter-title">Shiny apps</span></span></a>
+ <span class="menu-text"><span class="chapter-number">64</span>&nbsp; <span class="chapter-title">Shiny apps</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p10-02-deploy-shiny-app-aws.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">64</span>&nbsp; <span class="chapter-title">Deploy Shiny Apps lên AWS</span></span></a>
+ <span class="menu-text"><span class="chapter-number">65</span>&nbsp; <span class="chapter-title">Deploy Shiny Apps lên AWS</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p07-30-python-voi-r.html" class="sidebar-item-text sidebar-link active">
- <span class="menu-text"><span class="chapter-number">65</span>&nbsp; <span class="chapter-title">Sử dụng Python với R</span></span></a>
+ <span class="menu-text"><span class="chapter-number">66</span>&nbsp; <span class="chapter-title">Sử dụng Python với R</span></span></a>
   </div>
 </li>
       </ul>
@@ -623,31 +629,31 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p11-01-git.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">66</span>&nbsp; <span class="chapter-title">Sử dụng GIT</span></span></a>
+ <span class="menu-text"><span class="chapter-number">67</span>&nbsp; <span class="chapter-title">Sử dụng GIT</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p11-02-cmd.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">67</span>&nbsp; <span class="chapter-title">CMD và Bash</span></span></a>
+ <span class="menu-text"><span class="chapter-number">68</span>&nbsp; <span class="chapter-title">CMD và Bash</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p11-03-docker.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">68</span>&nbsp; <span class="chapter-title">Sử dụng docker</span></span></a>
+ <span class="menu-text"><span class="chapter-number">69</span>&nbsp; <span class="chapter-title">Sử dụng docker</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p11-04-apis.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">69</span>&nbsp; <span class="chapter-title">API</span></span></a>
+ <span class="menu-text"><span class="chapter-number">70</span>&nbsp; <span class="chapter-title">API</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p11-90-other.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">70</span>&nbsp; <span class="chapter-title">Các tricks khác</span></span></a>
+ <span class="menu-text"><span class="chapter-number">71</span>&nbsp; <span class="chapter-title">Các tricks khác</span></span></a>
   </div>
 </li>
       </ul>
@@ -664,7 +670,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p13-01-phan-tich-thuc-te.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">71</span>&nbsp; <span class="chapter-title">Các lưu ý phân tích thực tế</span></span></a>
+ <span class="menu-text"><span class="chapter-number">72</span>&nbsp; <span class="chapter-title">Các lưu ý phân tích thực tế</span></span></a>
   </div>
 </li>
       </ul>
@@ -679,9 +685,9 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <h2 id="toc-title">Mục lục</h2>
    
   <ul>
-  <li><a href="#giới-thiệu" id="toc-giới-thiệu" class="nav-link active" data-scroll-target="#giới-thiệu"><span class="header-section-number">65.1</span> Giới thiệu</a></li>
-  <li><a href="#deploy-shiny-app-có-sử-dụng-reticulate" id="toc-deploy-shiny-app-có-sử-dụng-reticulate" class="nav-link" data-scroll-target="#deploy-shiny-app-có-sử-dụng-reticulate"><span class="header-section-number">65.2</span> Deploy shiny app có sử dụng reticulate</a></li>
-  <li><a href="#tài-liệu-tham-khảo" id="toc-tài-liệu-tham-khảo" class="nav-link" data-scroll-target="#tài-liệu-tham-khảo"><span class="header-section-number">65.3</span> Tài liệu tham khảo</a></li>
+  <li><a href="#giới-thiệu" id="toc-giới-thiệu" class="nav-link active" data-scroll-target="#giới-thiệu"><span class="header-section-number">66.1</span> Giới thiệu</a></li>
+  <li><a href="#deploy-shiny-app-có-sử-dụng-reticulate" id="toc-deploy-shiny-app-có-sử-dụng-reticulate" class="nav-link" data-scroll-target="#deploy-shiny-app-có-sử-dụng-reticulate"><span class="header-section-number">66.2</span> Deploy shiny app có sử dụng reticulate</a></li>
+  <li><a href="#tài-liệu-tham-khảo" id="toc-tài-liệu-tham-khảo" class="nav-link" data-scroll-target="#tài-liệu-tham-khảo"><span class="header-section-number">66.3</span> Tài liệu tham khảo</a></li>
   </ul>
 </nav>
     </div>
@@ -690,7 +696,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">65</span>&nbsp; <span class="chapter-title">Sử dụng Python với R</span></h1>
+<h1 class="title"><span class="chapter-number">66</span>&nbsp; <span class="chapter-title">Sử dụng Python với R</span></h1>
 </div>
 
 
@@ -705,8 +711,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 </header>
 
-<section id="giới-thiệu" class="level2" data-number="65.1">
-<h2 data-number="65.1" class="anchored" data-anchor-id="giới-thiệu"><span class="header-section-number">65.1</span> Giới thiệu</h2>
+<section id="giới-thiệu" class="level2" data-number="66.1">
+<h2 data-number="66.1" class="anchored" data-anchor-id="giới-thiệu"><span class="header-section-number">66.1</span> Giới thiệu</h2>
 <p><code>Python</code> và <code>R</code> là 2 ngôn ngữ được sử dụng nhiều nhất trong Data Science. Mỗi ngôn ngữ đều có các ưu nhược điểm riêng và đã có rất nhiều các cuộc tranh luận xem ngôn ngữ nào ưu việt hơn. Python ưu việt hơn khi xây dựng mô hình Deep Learning và làm việc với các hệ thống khác nhau, xây dựng API. R lại nổi trội hơn về phân tích khám phá và trực quan hóa với <code>tidyverse</code>.</p>
 <p>Tuy nhiên, ta không nên chỉ bám vào 1 ngôn ngữ mà có thể sử dụng cả 2 bổ trợ cho nhau. Với <code>RStudio</code>, ta có thể sử dụng cả R &amp; Python, gọi các object qua lại giữa hai ngôn ngữ với sự ra đời của <code>reticulate</code> và hệ thống báo cáo với <code>quarto</code>.</p>
 <p>Để gọi 1 object từ R với Python, ta sử dụng method với <code>r</code> như sau</p>
@@ -721,8 +727,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <span id="cb2-3"><a href="#cb2-3" aria-hidden="true" tabindex="-1"></a>py<span class="sc">$</span>x_py</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
 </section>
-<section id="deploy-shiny-app-có-sử-dụng-reticulate" class="level2" data-number="65.2">
-<h2 data-number="65.2" class="anchored" data-anchor-id="deploy-shiny-app-có-sử-dụng-reticulate"><span class="header-section-number">65.2</span> Deploy shiny app có sử dụng reticulate</h2>
+<section id="deploy-shiny-app-có-sử-dụng-reticulate" class="level2" data-number="66.2">
+<h2 data-number="66.2" class="anchored" data-anchor-id="deploy-shiny-app-có-sử-dụng-reticulate"><span class="header-section-number">66.2</span> Deploy shiny app có sử dụng reticulate</h2>
 <p>Cách đơn giản nhất để deploy <code>shiny app</code> là deploy với <code>shinyapps.io</code>. Khi xây app có sử dụng <code>python</code>, do môi trường của <code>shinyapps.io</code> khác so với môi trường của máy local. Ta cần lưu ý các điểm sau:</p>
 <ul>
 <li>Hệ điều hành: Máy local dùng Windows, <code>shinyapps.io</code> dùng Linux. Do đó, với Windows, ta nên dùng <code>conda_environment</code> trong khi với Linux ta cần dùng <code>virtual_environment</code> từ <code>pip</code></li>
@@ -757,8 +763,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <span id="cb3-23"><a href="#cb3-23" aria-hidden="true" tabindex="-1"></a>}</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
 </section>
-<section id="tài-liệu-tham-khảo" class="level2" data-number="65.3">
-<h2 data-number="65.3" class="anchored" data-anchor-id="tài-liệu-tham-khảo"><span class="header-section-number">65.3</span> Tài liệu tham khảo</h2>
+<section id="tài-liệu-tham-khảo" class="level2" data-number="66.3">
+<h2 data-number="66.3" class="anchored" data-anchor-id="tài-liệu-tham-khảo"><span class="header-section-number">66.3</span> Tài liệu tham khảo</h2>
 <ul>
 <li><a href="https://rstudio.github.io/reticulate/">https://rstudio.github.io/reticulate/</a></li>
 </ul>
@@ -1118,12 +1124,12 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
       <a href="./p10-02-deploy-shiny-app-aws.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">64</span>&nbsp; <span class="chapter-title">Deploy Shiny Apps lên AWS</span></span>
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">65</span>&nbsp; <span class="chapter-title">Deploy Shiny Apps lên AWS</span></span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
       <a href="./p11-01-git.html" class="pagination-link">
-        <span class="nav-page-text"><span class="chapter-number">66</span>&nbsp; <span class="chapter-title">Sử dụng GIT</span></span> <i class="bi bi-arrow-right-short"></i>
+        <span class="nav-page-text"><span class="chapter-number">67</span>&nbsp; <span class="chapter-title">Sử dụng GIT</span></span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
